fixed z-index for covers
so they work in panels and stuff. e.g. the updating of 'em with ws from
the backend and whatnot

--- a/public_static/styles/components.less
+++ b/public_static/styles/components.less
@@ -197,13 +197,15 @@
 
         .transition(.7s);
 
+        z-index: 20;
+
         &.cover-hide {
             opacity: 0;
         }
     }
 
     .cover-overlay {
-        z-index: -99;
+        z-index: 10;
     }
 }
 
